Final (Layout a blocchi) [Added scrollbar fix]

--- a/css/master.css
+++ b/css/master.css
@@ -207,7 +207,6 @@ h4{font-size: 1.1rem;}
 /* PARTNERS */
 
 .logo-squared{
-    width: calc(100vw - 1px / 6); /* !!CHROME SCROLLBAR FIX!!! */
     height: calc(100vw / 6);
 }
 
